--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a {
     text-decoration: none;
     color: #F9FAF8;
 }
-body .body-1, .body-2, .body-3, .image-callout, header, footer, .call-to-action {
+body, .body-1, .body-2, .body-3, .image-callout, header, footer, .call-to-action {
     display: flex;
 }
 #header-image {
@@ -73,6 +73,10 @@ header {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
+}
+
+blockquote em {
+    font-weight: 500;
 }
 
 .image-callout {
